--- a/privacy.html
+++ b/privacy.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Privacy Policy</title>
-</head>
-<body>
-  <h1>Privacy Policy</h1>
-  <p>This application does not collect, store or share any personal information from users.</p>
-  <p>Data accessed via Facebook/Instagram APIs is used only for the functionality of the application and is not stored or shared externally.</p>
-  <p>For questions, contact: pikytkin@gmail.com</p>
-</body>
-</html>
+<h1>Privacy Policy</h1>
+<p>This application does not collect, store, or share any personal information from users.</p>
+<p>All data accessed via Facebook and Instagram APIs is used solely to enable the core functionality of the app (such as publishing content on behalf of the user) and is never stored or shared with any third parties.</p>
+<p>We do not collect login credentials, profile data, or track user behavior beyond what is required to provide the requested functionality.</p>
+<p>If you have any questions about this policy or the app’s data usage, please contact us at: <a href="mailto:pikytkin@gmail.com">pikytkin@gmail.com</a></p>
