--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram Poster</title>
 </head>
 <body>
-  <h1>Welcome to Instagram Poster</h1>
-  <p><a href="privacy.html">Privacy Policy</a></p>
+  <h1>Instagram Poster</h1>
+  <p>This application simplifies the process of publishing product posts to Instagram.</p>
+  <p>You can easily share posts with images and descriptions of your products directly to your Instagram business account.</p>
+  <p>To use the app, connect your Instagram account via Facebook and authorize the required permissions.</p>
+
+  <h3>Useful Links:</h3>
+  <ul>
+    <li><a href="privacy.html">Privacy Policy</a></li>
+    <li><a href="terms.html">Terms of Use</a></li>
+  </ul>
+
+  <p>Contact us: <a href="mailto:pikytkin@gmail.com">pikytkin@gmail.com</a></p>
 </body>
 </html>
